- changed HTTP redirect port to 8800
- installing cached shader map including custom maps:
  FusionKKore,Dedale,Grendelkeep,Campgrounds,Edge,Hiata4,GermanAlps,Map07Doom,Map32DoomCensored,Rankin,Defiant,
  Novus,FacingWorlds,Sprinta,Bloxeh,Wootabolous
- enabled all callvotes

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to nginx!</title>
+<title>TOXIKK HTTP Redirect</title>
 <style>
     body {
-        width: 35em;
+        width: 30em;
         margin: 0 auto;
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
 </style>
 </head>
 <body>
-<h1>Welcome to nginx!</h1>
-<p>If you see this page, the nginx web server is successfully installed and
-working. Further configuration is required.</p>
-
-<p>For online documentation and support please refer to
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-Commercial support is available at
-<a href="http://nginx.com/">nginx.com</a>.</p>
-
-<p><em>Thank you for using nginx.</em></p>
+<h1>TOXIKK HTTP Redirect</h1>
+<p>
+This server provides <a href="toxikkredirect/">fast auto-download of custom content files</a>
+<br>to players connecting to <a href="http://toxikk.com/">TOXIKK</a> game servers on this machine.
+</p>
+<p>
+This server is part of the <a href="https://github.com/ToxikkModdingTeam/ToxikkServerPack">TOXIKK Server Pack</a>.
+</p>
 </body>
 </html>
